@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: expr.test,v 1.8 2005/07/14 00:43:50 mdejong Exp $
+# RCS: @(#) $Id: expr.test,v 1.9 2005/07/14 02:04:49 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -348,6 +348,9 @@ test expr-10.10 {CompileShiftExpr: runtime error} {
 test expr-10.11 {CompileShiftExpr: runtime error} {
     list [catch {expr {"a"<<"b"}} msg] $msg
 } {1 {can't use non-numeric string as operand of "<<"}}
+test expr-10.12 {CompileAddExpr: no value2 in subexpr} {
+    list [catch {expr {(1 + ) + 3}} err] $err
+} {1 {syntax error in expression "(1 + ) + 3"}}
 
 test expr-11.1 {CompileAddExpr: just multiply expr} {expr 4*-2} -8
 test expr-11.2 {CompileAddExpr: just multiply expr} {expr 0xff%2} 1
